watchlist and portfolio on analysis page

--- a/views/stockpage.ejs
+++ b/views/stockpage.ejs
@@ -192,7 +192,7 @@ setInterval(priceupdate(valstock),5000);
 
 function gettoday(){
     var today = new Date();
-    var dd = today.getDate()-2;
+    var dd = today.getDate()-1;
     var mm = today.getMonth()+1; //January is 0!
     var yyyy = today.getFullYear();
     
@@ -240,6 +240,8 @@ function gettoday(){
             $('#addtowatch').attr('disabled', 'disabled'); 
                         }
                    });
+
+                   alert("Added Successfully to watchlist");
     })    
 
 
@@ -346,7 +348,7 @@ function profitloss(){
                   data=data[0];
                   
                    
-                  $('#profitlosstable').append('<tr><th scope="col">'+data.year+'</th><th scope="col">'+data.othermfr+'</th><th scope="col">'+data.powerandfuel+'</th><th scope="col">'+data.sellingandadmin+'</th><th scope="col">'+data.otherexpenses+'</th><th scope="col">'+data.employeecost+'</th><th scope="col">'+data.otherincome+'</th><th scope="col">'+data.tax+'</th><th scope="col">'+data.beforetax+'</th><th scope="col">'+data.interest+'</th><th scope="col">'+data.dividendamount+'</th><th scope="col">'+data.depreciation+'</th><th scope="col">'+data.sales+'</th><th scope="col">'+data.changeininventory+'</th><th scope="col">'+data.netprofit+'</th><th scope="col">'+data.rawmaterialcost+'</th><th scope="col">'+data.eps+'</th></tr>')
+                  $('#profitlosstable').append('<tr><th scope="col">'+data.year+'</th><th scope="col">'+data.othermfr+'</th><th scope="col">'+data.powerandfuel+'</th><th scope="col">'+data.sellingandadmin+'</th><th scope="col">'+data.otherexpenses+'</th><th scope="col">'+data.employeecost+'</th><th scope="col">'+data.otherincome+'</th><th scope="col">'+data.tax+'</th><th scope="col">'+data.beforetax+'</th><th scope="col">'+data.interest+'</th><th scope="col">'+data.dividendamount+'</th><th scope="col">'+data.depreciation+'</th><th scope="col">'+data.salea+'</th><th scope="col">'+data.changeininventory+'</th><th scope="col">'+data.netprofit+'</th><th scope="col">'+data.rawmaterialcost+'</th><th scope="col">'+data.eps+'</th></tr>')
      
                                   }
                              });
