--- a/views/analysis.ejs
+++ b/views/analysis.ejs
@@ -66,7 +66,8 @@
     $('#addsector').on('click',function(){
         count++;
       $('#sectordiv').children().remove();
-
+      
+      $('#sectordiv').append('<div class="col-md-5 filteroption" ><select class="ui fluid dropdown" id="filters'+count+'row"><option>Sector</option></select></div><div class="col-md-1"></div><div class="col-md-5" id="datasector"></div>');  
          $.ajax({
                                                 url:location.origin+"/api/datatable/sectordata",
                                                 type:"GET",
@@ -76,26 +77,25 @@
                                                     'Content-Type':'application/json'
                                               },
                                              success:function(data) {
-                                              
+                                              var vendor_username="";
 
                                                      $('#datasector').append('<select id="datasectorvalue" class="form-control selectpicker" data-live-search="true"></select>');
 
-                                                     data.data.map(function(e){
-                                                        vendor_username +='<option value="'+e.user.id+'">'+e.user.username+'</option>'
+                                                     data.map(function(e){
+                                                        vendor_username +='<option>'+e.sector+'</option>'
                                                     })
                                                
-                                                     $('#value_type'+rownum).append(vendor_username);
-                                                    $('#value_type'+rownum).selectpicker('refresh');
+                                                     $('#datasectorvalue').append(vendor_username);
+                                                    $('#datasectorvalue').selectpicker('refresh');
 
                                                                                           }
                                         });
-
-       $('#sectordiv').append('<div class="col-md-5 filteroption" ><select class="ui fluid dropdown" id="filters'+count+'row"><option>Sector</option></select></div><div class="col-md-1"></div><div class="col-md-5" id="datasector"></div>');    
+  
         
     });
     $('#submitfilter').on("click",function(){
         
-         $('#filtereddata').children().remove();
+         $('#filteredddata').children().remove();
         var linkadded="";
         for(var i=1;i<=count;i++){
             console.log(count);
@@ -119,7 +119,7 @@
                linkadded+="equitystart="+$('#slider-range'+i).slider("values",0)+"&equityend="+$('#slider-range'+i).slider("values",1);
            }
            else if($('#filters'+i+'row').val()=='Sector'){
-            linkadded+='sector='+$('');
+            linkadded+='sector='+$('#datasectorvalue').val();
            }
             
             linkadded+="&"
@@ -153,7 +153,7 @@
                          console.log(bsecodedata);                 
                          var fk="";
                   if(user){
-                    fk = '<button class="btn btn-primary btn-sm btn-block">Add to Watchlist</button><button class="btn btn-primary btn-sm btn-block">Add to Portfolio</button>';
+                    fk = '<button class="addtowatch btn btn-primary btn-sm btn-block" data-bsecode="'+bsecodedata.bse+'">Add to Watchlist</button><button class="addtoportfolio btn btn-primary btn-sm btn-block" data-bsecode="'+bsecodedata.bse+'">Add to Portfolio</button>';
                   }                
                   $('#filteredddata').append('<div class="card border-success col-md-3" style="max-width: 18rem;"><div class="card-header bg-transparent border-success"><strong>'+bsecodedata.name+'</strong><span style="float:right">'+bsecodedata.bse+'</span></div><div class="card-body text-success"><h5 class="card-title">Report card</h5><div><strong>Eps(Rs):</strong>'+bsecodedata.eps+'</div><div><strong>Sales :</strong>'+bsecodedata.salea+'</div><div><strong>Face-Value :</strong>'+bsecodedata.facevalue+'</div><div><strong>Net Profit(cr) :</strong>'+bsecodedata.netprofit+'</div><a href="/stocks?bse='+bsecodedata.bse+'">View more</a></div><div class="card-footer bg-transparent border-success">'+fk+'</div></div>');
                       
@@ -180,9 +180,73 @@
     });
     
     
+    $('#filteredddata').on("click",'.card .addtowatch',function(){
+                
+             var a= $(this).data('bsecode');
+             console.log(a);
+              
+                           $.ajax({
+                                  url:location.origin+"/api/addtowatch?bsecode="+a,
+                                  type:"GET",
+                                  dataType: 'json',
+                                  data:{},
+                                  headers: {
+                                  'Content-Type':'application/json' 
+                                  },
+                                  success:function(data) {
+                                  console.log(data);
+                            
+                      $('#addtowatch').attr('disabled', 'disabled'); 
+                                  }
+                             });
+          
+                             alert("stock added to watchlist successfully ");
+              })  
     
-    
-    
+    $('#filteredddata').on("click",'.card .addtoportfolio',function(){
+
+     var a= $(this).data('bsecode');
+    var b = parseInt(prompt("enter quantity"),10);
+    var c = parseInt(prompt("enter purchase price per share"),10);
+    console.log("a ="+a+" b=  "+b+"  c=  "+c);
+    $.ajax({
+            url:location.origin+"/api/stockbybse?bsecode="+a,
+            type:"GET",
+            dataType: 'json',
+            data:{},
+            headers: {
+            'Content-Type':'application/json' 
+            },
+            success:function(data) {
+            console.log(data);
+                var d= data[0].name;
+            console.log("------------------------------------");
+                console.log(a+"  "+b+"  "+c+"  "+d);
+                console.log("----------------------------------");
+                $.ajax({
+                        url:location.origin+"/api/addtoportfolio?bsecode="+a+"&stockname="+d+"&numberofstocks="+b+"&boughtat="+c,
+                        type:"GET",
+                        dataType: 'json',
+                        data:{},
+                        headers: {
+                        'Content-Type':'application/json' 
+                        },
+                        success:function(data) {
+                        console.log(data);
+                
+            $('#addtoportfolio').attr('disabled', 'disabled'); 
+                        }
+                    });
+
+   alert("stock added to portfolio successfully ");
+
+
+                        }
+                    });
+
+
+                
+    });   
     
 </script>
 
