--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -100,7 +100,7 @@ function  cont(){
 
 function gettoday(){
     var today = new Date();
-    var dd = today.getDate();
+    var dd = today.getDate()-1;
     var mm = today.getMonth()+1; //January is 0!
     var yyyy = today.getFullYear();
     
