--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,21 +6,21 @@
 <div id="login">
     <h3 class="text-center text-white pt-5"></h3>
     <div class="container">
-        <div id="login-row" class="row justify-content-center align-items-center">
-            <div id="login-column" class="col-md-6" style="border: 2px solid #4e7e80;border-radius: 25%;">
+        <div id="login-row" class="row justify-content-center align-items-center"  style="color:#B71C1C">
+            <div id="login-column" class="col-md-6" style="border: 2px solid #4e7e80;border-radius: 25%;background:radial-gradient(#FFD54F,#FFECB3);">
                 <div id="login-box" class="col-md-12" >
                     <form id="login-form" class="form" action="/login" method="POST">
-                        <h2 class="text-center text-secondary">Login</h2>
+                        <h2 class="text-center">Login</h2>
                         <div class="form-group">
-                            <label for="username" class="text-secondary">Email-id:</label><br>
-                            <input type="text" name="username" id="username" class="form-control"required>
+                            <label for="username">Email-id:</label><br>
+                            <input type="email" name="username" id="username" style="color:#4A148C" class="form-control"required>
                         </div>
                         <div class="form-group">
-                            <label for="password" class="text-secondary">Password:</label><br>
-                            <input type="password" name="password" id="password" class="form-control" required>
+                            <label for="password">Password:</label><br>
+                            <input type="password" name="password" id="password" style="color:#4A148C" class="form-control" required>
                         </div>
                         <div class="form-group">
-                           <center><input type="submit" name="submit" class="btn btn-secondary btn-md" value="Submit"></center>
+                           <center><input type="submit" name="submit" class="btn btn-md" style="background:#B71C1C;color:white" value="Submit"></center>
                             
                         </div>
                         
