--- a/views/analysis.ejs
+++ b/views/analysis.ejs
@@ -3,7 +3,7 @@
 
 
 
-<div class="container">
+<div class="container" style="background:white">
     
         <div style="text-align: center;padding-top:2%;padding-bottom:4%"><button id="addfilter" class="positive ui button" style:"position: absolute;">ADD Filter</button></div>
   
@@ -31,6 +31,12 @@
 </div>
 
 <script>
+$(document).ready(function(){
+$('body').css("background-color", "white");
+console.log("here");
+})
+
+
 
     var count=0;
    
@@ -40,9 +46,9 @@
     
     
     $('#addfilter').on('click',function(){
+    
         count++;     
           $('.filterpouch').append('<div class="row" id="row'+count+'value"><div class="col-md-5 filteroption" ><select class="ui fluid  dropdown" id="filters'+count+'row"><option>Price Range</option><option>EPS</option><option>Sales</option><option>Face-Value</option><option>Equity</option><option>Net-Profit</option></select></div><div class="col-md-1"></div><div class="col-md-2"><input type="text" id="amount'+count+'" readonly style="border:0; color:#1f69f6; font-weight:bold;"></div><div id="slider-range'+count+'" class="col-md-4"></div></div>');    
-        
          $( function() {
 		$( "#slider-range"+count).slider({
 			range: true,
@@ -247,7 +253,7 @@
 
                 
     });   
-    
+     
 </script>
 
 
