--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -100,7 +100,15 @@ function  cont(){
 
 function gettoday(){
     var today = new Date();
-    var dd = today.getDate()-1;
+    var n = today.getHours();
+    var p = today.getMinutes();
+    var dd = "";
+    console.log(n+" "+p);
+    if(n<10){
+      dd = today.getDate()-1;
+    }else{
+       dd = today.getDate();
+    }
     var mm = today.getMonth()+1; //January is 0!
     var yyyy = today.getFullYear();
     
@@ -112,6 +120,7 @@ function gettoday(){
         mm = '0'+mm
     } 
     var compdate = yyyy+"-"+mm+"-"+dd;
+    console.log(compdate);
     return(compdate);
     
 
